# calculator-rust

./: Cargo.toml  README.md  config.toml  docker-compose.yaml  operations.csv  report.csv
config/: nginx.conf
libs/: Cargo.toml
libs/src/: lib.rs
libs/src/common/: config.rs  mod.rs  time.rs  verfication.rs
libs/src/domain/: operation.rs
libs/src/repository/: repository.rs
services/calculate/: Cargo.toml
services/calculate/src/: main.rs
services/calculate/src/routes/: calculate.rs  health.rs  mod.rs
services/notifier/: Cargo.toml
services/notifier/src/: main.rs
services/report/: Cargo.toml
services/report/src/: main.rs
services/report/src/routes/: health.rs  mod.rs  report.rs
services/store/: Cargo.toml
services/store/src/: main.rs
sql/: schema.sql
src/: main.rs
src/common/: time.rs  verfication.rs
src/domain/: operation.rs
src/repository/: repository.rs
src/routes/: calculate.rs  health.rs  mod.rs  report.rs
tools/benchmark/: calculate.sh
tools/requests/: calculate.sh  health.sh  report.sh
tools/requests/proxy-reverse/: calculate.sh  report.sh
tools/requests/report/: health.sh  report.sh
tools/sql/: data.sql
