[workspace]
members = [
    "services/calculate",
    "services/report",
    "libs"
]


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
csv = "1.3.0"
chrono = "0.4.38"
tokio-postgres = "0.7.11"
libs = {path = "libs"}
